--- a/octomap_server/package.xml
+++ b/octomap_server/package.xml
@@ -31,6 +31,8 @@
   <build_depend>dynamic_reconfigure</build_depend>
   <build_depend>nodelet</build_depend>
   <build_depend>libpcl-all-dev</build_depend>
+  <build_depend>message_generation</build_depend>
+  
 
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
@@ -46,6 +48,8 @@
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>libpcl-all</run_depend>
+ <run_depend>message_runtime</run_depend>
+ <run_depend>message_generation</run_depend>
  
 </package>
 
